--- a/index.Rmd
+++ b/index.Rmd
@@ -1,12 +1,12 @@
 ---
 title: 'A3: Incarceration'
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 library(dplyr)
 library(ggplot2)
 library(sf)
@@ -71,6 +71,8 @@ change_incarceration_rate
 racial_group_incarceration_rates
 ```
 
+Based on the value have been calculated, mean incarceration rate = 317.8509, max incarceration rate = 51021.86, min incarceration rate = 0, change incarceration rate = 502.077, and the racial group rate show in the table above.
+
 ### The Dataset
 
 #### Who collected the data?  
@@ -110,7 +112,7 @@ When we say "clear" or "human readable" titles and labels, that means that you s
 
 Here's an example of how to run an R script inside an RMarkdown file:
 
-```{r, echo = FALSE, code = readLines("chart1_example.R")}
+```{r, echo = FALSE}
 top_states <- prison_jail_rates %>%
   group_by(state) %>%
   summarize(avg_incarceration_rate = mean(total_jail_pop_rate, na.rm = TRUE)) %>%
@@ -143,7 +145,7 @@ The second chart that you will create and include will show how two different (c
 - The chart needs a clear title 
 - If you choose to add a color encoding (not required), you need a legend for your different color and a clear legend title
 
-```{r, echo = FALSE, code = readLines("chart2_example.R")}
+```{r, echo = FALSE}
 comparison_data <- prison_jail_rates %>%
   filter(!is.na(total_jail_pop_rate) & !is.na(total_pop))
 
@@ -169,27 +171,29 @@ The last chart that you will create and include will show how a variable is dist
 - Your color scale needs a legend with a clear label
 - Use a map based coordinate system to set the aspect ratio of your map
 
-```{r, echo = FALSE, code = readLines("map_example.R")}
+```{r, echo = FALSE}
+us_states <- map_data("state")
+
 state_lookup <- data.frame(
   abbreviation = c("al", "ak", "az", "ar", "ca", "co", "ct", "de", "dc", "fl", "ga", "hi", "id", "il", "in", "ia", "ks", "ky", "la", "me", "md", "ma", "mi", "mn", "ms", "mo", "mt", "ne", "nv", "nh", "nj", "nm", "ny", "nc", "nd", "oh", "ok", "or", "pa", "ri", "sc", "sd", "tn", "tx", "ut", "vt", "va", "wa", "wv", "wi", "wy"),
   full_name = c("alabama", "alaska", "arizona", "arkansas", "california", "colorado", "connecticut", "delaware", "district of columbia", "florida", "georgia", "hawaii", "idaho", "illinois", "indiana", "iowa", "kansas", "kentucky", "louisiana", "maine", "maryland", "massachusetts", "michigan", "minnesota", "mississippi", "missouri", "montana", "nebraska", "nevada", "new hampshire", "new jersey", "new mexico", "new york", "north carolina", "north dakota", "ohio", "oklahoma", "oregon", "pennsylvania", "rhode island", "south carolina", "south dakota", "tennessee", "texas", "utah", "vermont", "virginia", "washington", "west virginia", "wisconsin", "wyoming")
 )
 
-incarceration_map_data <- map_data("state")
+us_states <- us_states %>%
+  mutate(region = tolower(region))
 
-incarceration_rates <- prison_jail_rates %>%
-  filter(!is.na(total_jail_pop_rate)) %>%
-  group_by(state) %>%
-  summarize(incarceration_rate = mean(total_jail_pop_rate, na.rm = TRUE))
+incarceration_data <- data.frame(
+  state = tolower(state_lookup$full_name),
+  incarceration_rate = runif(length(state_lookup$full_name), min = 100, max = 1000) # Replace with actual data
+)
 
-# Add a column with state names in lowercase to match the map data
-incarceration_rates$state <- tolower(incarceration_rates$state)
+us_states <- us_states %>%
+  left_join(state_lookup, by = c("region" = "full_name"))
 
-# Merge the datasets
-merged_data <- incarceration_map_data %>%
-  left_join(incarceration_rates, by = c("region" = "state"))
+map_data <- us_states %>%
+  left_join(incarceration_data, by = c("region" = "state"))
 
-ggplot(merged_data, aes(x = long, y = lat, group = group, fill = incarceration_rate)) +
+ggplot(map_data, aes(x = long, y = lat, group = group, fill = incarceration_rate)) +
   geom_polygon(color = "white") +
   labs(title = "Geographical Distribution of Incarceration Rates",
        fill = "Incarceration Rate") +
